# code_generic

./: .gitmodules  CMakeLists.txt
code/: CMakeLists.txt
code/code/: CMakeLists.txt  main.cpp
code/intern/: CMakeLists.txt  forwarder_ex1.cpp  forwarder_ex2.cpp  main.cpp  test_override_new.cpp
code/intern/function_benchmark/: CMakeLists.txt  function_benchmark.cpp
code/intern/memfun_benchmark/: CMakeLists.txt  memfun_benchmark.cpp
code/intern/override_new/: CMakeLists.txt  memuse.cpp  memuse.h  override_new.cpp  override_new.h
